added 'About Me' codecat section and updated 'About Me'link

--- a/index.html
+++ b/index.html
@@ -10,12 +10,56 @@
             <h1> CodeSpace Cat's Portfolio 🎨 </h1>
             <nav>
                     <ul>
-                        <li> About Me</li>
-                        <li> Skills</li>
-                        <li> Portfolio</li>
-                        <li> Contact</li>
+                        <li> <a href="#about-codecat">About Me</a> 👋</li>
+                        <li> Skills ⚒️</li>
+                        <li> Portfolio 📸</li>
+                        <li> Contact 🤙</li>
                     </ul>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
+                    </p>
             </nav>
+            <section>
+                <h3 id="about-codecat"> About Me 😺</h3>
+                <img src="cat-codespace.png" alt="codespace cat profile image"> 
+                <p> Hello! I'm <srong> Codespace cat.</srong> I'm purr-ssionate about web developement and design. 
+                    I've been pawing at the web industry for just one catnap (taht's less than one day in human terms), and
+                    I adore crafting pawsitively intuitive, whisker-twitching, and fur-tatsic web experiences. Whoa that's a lot of puns. 🐾
+                </p>
+            </section>
+            <section>
+
+            </section>
 
         </main>
         <footer>
