added skills section and relevant link to it

--- a/index.html
+++ b/index.html
@@ -10,44 +10,11 @@
             <h1> CodeSpace Cat's Portfolio 🎨 </h1>
             <nav>
                     <ul>
-                        <li> <a href="#about-codecat">About Me</a> 👋</li>
-                        <li> Skills ⚒️</li>
+                        <li> <a href="#about-codecat">About Me 👋</a></li>
+                        <li> <a href="#myskills"> Skills ⚒️ </a></li>
                         <li> Portfolio 📸</li>
                         <li> Contact 🤙</li>
                     </ul>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt dicta atque unde maiores reprehenderit nisi voluptas ratione a aspernatur quo quia, est amet consequuntur libero deleniti fugiat quisquam laudantium?
-                    </p>
             </nav>
             <section>
                 <h3 id="about-codecat"> About Me 😺</h3>
@@ -58,7 +25,15 @@
                 </p>
             </section>
             <section>
-
+                <h3 id="myskills"> My Skills 🤹‍♂️</h3>
+                <ul> 
+                    <li> Web Development 🕸️</li>
+                    <li> UI/UX Design 🎨</li>
+                    <li> Backend Development 🧱</li>
+                    <li> Database Management 💻</li>
+                    <li> SEO Optimiztion 🔎</li>
+                    <li> Lying in the Sun 🌞</li>
+                </ul>
             </section>
 
         </main>
