added a table section to index.html and corresponding link in the nav section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <header>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" >
         <title> CodeSpace Cat Portfolio</title>
     </header>
 
@@ -11,8 +11,8 @@
             <nav>
                     <ul>
                         <li> <a href="#about-codecat">About Me 👋</a></li>
-                        <li> <a href="#myskills"> Skills ⚒️ </a></li>
-                        <li> Portfolio 📸</li>
+                        <li> <a href="#myskillssection"> Skills ⚒️ </a></li>
+                        <li> <a href="#catfoliosection"> Portfolio 📸</a></li>
                         <li> Contact 🤙</li>
                     </ul>
             </nav>
@@ -25,7 +25,7 @@
                 </p>
             </section>
             <section>
-                <h3 id="myskills"> My Skills 🤹‍♂️</h3>
+                <h3 id="myskillssection"> My Skills 🤹‍♂️</h3>
                 <ul> 
                     <li> Web Development 🕸️</li>
                     <li> UI/UX Design 🎨</li>
@@ -34,6 +34,36 @@
                     <li> SEO Optimiztion 🔎</li>
                     <li> Lying in the Sun 🌞</li>
                 </ul>
+            </section>
+            <section>
+                <h3 id="catfoliosection"> Catfolio </h3>
+                <table>
+                    <tr>
+                        <th> Project Name</th>
+                        <th> Date</th>
+                        <th> Description</th>
+                        <th> Thumbnail</th>
+                    </tr>
+                    <tr> 
+                        <td> Purfect Landing page</td>
+                        <td> January 2024</td>
+                        <td> A delightful landing page for a luxury cat condo</td>
+                        <td> <img src="1.png" alt="a picture of an awesome landing page for a luxury cat condo"> </td>
+                    </tr>
+                    <tr>
+                        <td> Kitty Commerce</td>
+                        <td> February 2024</td>
+                        <td> An online store selling the fanciest catnip toys.</td>
+                        <td> <img src="2.png" alt="image of online store web page"></td>
+                    </tr>
+                    <tr>
+                        <td> CatChat Social</td>
+                        <td> June 2024</td>
+                        <td> A social media site for cats to meow and hiss!</td>
+                        <td> <img src="3.png" alt="an image of a web page displaying a mockup of the social media site on a phone screen"> </td>
+                    </tr>
+
+                </table>
             </section>
 
         </main>
