--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body> 
         <main>
             <h1> CodeSpace Cat's Portfolio 🎨 </h1>
+            <!-- This is the navigation section-->
             <nav>
                     <ul>
                         <li> <a href="#about-codecat">About Me 👋</a></li>
@@ -16,6 +17,7 @@
                         <li> Contact 🤙</li>
                     </ul>
             </nav>
+            <!-- This is the about codespace cat section-->
             <section>
                 <h3 id="about-codecat"> About Me 😺</h3>
                 <img src="cat-codespace.png" alt="codespace cat profile image"> 
@@ -24,6 +26,7 @@
                     I adore crafting pawsitively intuitive, whisker-twitching, and fur-tatsic web experiences. Whoa that's a lot of puns. 🐾
                 </p>
             </section>
+            <!-- This is the codespace cat skills section-->
             <section>
                 <h3 id="myskillssection"> My Skills 🤹‍♂️</h3>
                 <ul> 
@@ -35,6 +38,7 @@
                     <li> Lying in the Sun 🌞</li>
                 </ul>
             </section>
+            <!-- This is the table section conating codespace cat's portfolio pieces-->
             <section>
                 <h3 id="catfoliosection"> Catfolio </h3>
                 <table>
@@ -64,6 +68,16 @@
                     </tr>
 
                 </table>
+            </section>
+            <!-- This is the contact me section-->
+            <section>
+                <h3> Contact Me </h3>
+                <form>
+                    <label > Name:</label><input type="text" placeholder=" your name here">
+                    <label>Email: </label><input type="text" placeholder="youremail@domain.com">
+                    <label> Message:</label><input type="text" placeholder="your message here">
+                    <button type="submit"> Submit</button>
+                </form>
             </section>
 
         </main>
