updated link to contact section in nav in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <li> <a href="#about-codecat">About Me 👋</a></li>
                         <li> <a href="#myskillssection"> Skills ⚒️ </a></li>
                         <li> <a href="#catfoliosection"> Portfolio 📸</a></li>
-                        <li> Contact 🤙</li>
+                        <li> <a href="#contactmesection"> Contact 🤙</a></li>
                     </ul>
             </nav>
             <!-- This is the about codespace cat section-->
@@ -71,7 +71,7 @@
             </section>
             <!-- This is the contact me section-->
             <section>
-                <h3> Contact Me </h3>
+                <h3 id="contactmesection"> Contact Me </h3>
                 <form>
                     <label > Name:</label><input type="text" placeholder=" your name here">
                     <label>Email: </label><input type="text" placeholder="youremail@domain.com">
