fixed images links by adding images/image.png path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- This is the about codespace cat section-->
             <section>
                 <h3 id="about-codecat"> About Me 😺</h3>
-                <img src="cat-codespace.png" alt="codespace cat profile image"> 
+                <img src="images/cat-codespace.png" alt="codespace cat profile image"> 
                 <p> Hello! I'm <srong> Codespace cat.</srong> I'm purr-ssionate about web developement and design. 
                     I've been pawing at the web industry for just one catnap (taht's less than one day in human terms), and
                     I adore crafting pawsitively intuitive, whisker-twitching, and fur-tatsic web experiences. Whoa that's a lot of puns. 🐾
@@ -52,19 +52,19 @@
                         <td> Purfect Landing page</td>
                         <td> January 2024</td>
                         <td> A delightful landing page for a luxury cat condo</td>
-                        <td> <img src="1.png" alt="a picture of an awesome landing page for a luxury cat condo"> </td>
+                        <td> <img src="images/1.png" alt="a picture of an awesome landing page for a luxury cat condo"> </td>
                     </tr>
                     <tr>
                         <td> Kitty Commerce</td>
                         <td> February 2024</td>
                         <td> An online store selling the fanciest catnip toys.</td>
-                        <td> <img src="2.png" alt="image of online store web page"></td>
+                        <td> <img src="images/2.png" alt="image of online store web page"></td>
                     </tr>
                     <tr>
                         <td> CatChat Social</td>
                         <td> June 2024</td>
                         <td> A social media site for cats to meow and hiss!</td>
-                        <td> <img src="3.png" alt="an image of a web page displaying a mockup of the social media site on a phone screen"> </td>
+                        <td> <img src="images/3.png" alt="an image of a web page displaying a mockup of the social media site on a phone screen"> </td>
                     </tr>
 
                 </table>
