--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section>
                 <h3 id="about-codecat"> About Me 😺</h3>
                 <img src="images/cat-codespace.png" alt="codespace cat profile image"> 
-                <p> Hello! I'm <strong>Codespace cat.</strong> I'm purr-ssionate about web developement and design. I've been pawing at the web industry for just one catnap (taht's less than one day in human terms), and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tatsic web experiences. Whoa that's a lot of puns. 🐾
+                <p> Hello! I'm <strong>Codespace cat.</strong> I'm purr-ssionate about web developement and design. I've been pawing at the web industry for just one catnap (taht's less than one day in human terms), and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experiences. Whoa that's a lot of puns. 🐾
                 </p>
             </section>
             <!-- This is the codespace cat skills section-->
