added comment regarding unavailabilityof brick wall emoji

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <ul> 
                     <li> Web Development 🕸️</li>
                     <li> UI/UX Design 🎨</li>
+                    <!-- I could find the brick wall emoji on getemoji.com, which is where I get my emojis since my laptop keyboard doesn't access native emojis-->
                     <li> Backend Development 🧱</li>
                     <li> Database Management 💻</li>
                     <li> SEO Optimiztion 🔎</li>
