updated html.indes with textarea element in place of text input for the form

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <form>
                     <label > Name:</label><input type="text" placeholder=" your name here">
                     <label>Email: </label><input type="text" placeholder="youremail@domain.com">
-                    <label> Message:</label><input type="text" placeholder="your message here">
+                    <label> Message:</label><textarea placeholder="your message here"> </textarea>
                     <button type="submit"> Submit</button>
                 </form>
             </section>
